<resources>
    <string name="app_name">LookUp</string>
    <string name="facebook_app_id">1633049006955053</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_share">Settings</string>
    <string name="radius">Set Radius</string>
    <string name="set_button">Filters</string>
    <string name="apply_button">Apply</string>
    <string name="filter_description">Please choose appropriate filters</string>
    <string name="set_radius">Specify radius in kms</string>
    <string name="eateries">Eateries</string>
    <string name="hospitals">Hospitals</string>
    <string name="liquor">Liquor</string>
    <string name="educational">Educational Institutes</string>
</resources>
